# iman

./: CMakeLists.txt
reference/intel/: instruction.iman
source/: CMakeLists.txt  iman.c  iman.h  iman_architecture.h  iman_config.h  iman_options.c  iman_options.h
source/parser/: CMakeLists.txt  iman_binary_writer.c  iman_binary_writer.h  iman_form_parser.c  iman_form_parser.h  iman_lexer.c  iman_lexer.h  iman_parser.c  iman_parser.h  iman_ref_writer.c  iman_ref_writer.h  iman_reference.c  iman_reference.h  parser.c
source/tools/: CMakeLists.txt  intelf2i.c
